@@ -1,6 +1,7 @@
 Gaim: The Pimpin' Penguin IM Client that's good for the soul!
 
 version 1.1.5:
+	* Yahoo file receiving and buddy icon receiving work again.
 	* Limit animated buddy icon frame rates to 10 frames per second
 	  (Nathan Conrad)
 
